# ChangeLog for sys-apps/razercfg
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/razercfg/ChangeLog,v 1.16 2013/05/04 20:25:06 joker Exp $

*razercfg-0.20 (04 May 2013)

  04 May 2013; Christian Birchinger <joker@gentoo.org> +razercfg-0.20.ebuild:
  Version bump

  20 Mar 2013; Christian Birchinger <joker@gentoo.org>
  -files/razercfg-0.16-pidlogfix.patch, -razercfg-0.17.ebuild,
  -razercfg-0.17_p20111028.ebuild:
  Remove old versions and patches

  05 Feb 2013; Samuli Suominen <ssuominen@gentoo.org>
  razercfg-0.19_p20121013.ebuild:
  Stop using $(get_libdir) for installing udev rules since /lib/udev is the
  correct udevdir as defined by udev.eclass

  06 Jan 2013; Zac Medico <zmedico@gentoo.org> razercfg-0.19_p20121013.ebuild:
  Use snapshot from upstream gitweb, since the current one is unfetchable (bug
  #445228).

*razercfg-0.19_p20121013 (27 Nov 2012)

  27 Nov 2012; Christian Birchinger <joker@gentoo.org>
  +razercfg-0.19_p20121013.ebuild:
  Version bump with git snapshot that supports more mice such as the Imperator

  14 Oct 2012; Christian Birchinger <joker@gentoo.org> -razercfg-0.16.ebuild,
  -razercfg-0.16-r1.ebuild:
  Remove old versions

*razercfg-0.19 (14 Oct 2012)

  14 Oct 2012; Christian Birchinger <joker@gentoo.org> +razercfg-0.19.ebuild:
  Version bump

*razercfg-0.18 (25 Aug 2012)

  25 Aug 2012; Christian Birchinger <joker@gentoo.org> +razercfg-0.18.ebuild:
  Version bump

  26 Jul 2012; Johannes Huber <johu@gentoo.org> razercfg-0.16-r1.ebuild,
  razercfg-0.16.ebuild:
  Add missing slot dependencies on Qt.

  12 Jul 2012; Christian Birchinger <joker@gentoo.org> razercfg-0.16.ebuild,
  razercfg-0.16-r1.ebuild, razercfg-0.17.ebuild:
  Update SRC_URI to new domain

*razercfg-0.17_p20111028 (18 May 2012)

  18 May 2012; Christian Birchinger <joker@gentoo.org>
  +razercfg-0.17_p20111028.ebuild:
  Version bump using the most recent git version
