@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst prepare test
+DEPEND=sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) virtual/pkgconfig
+DESCRIPTION=Utility for advanced configuration of Razer mice (DeathAdder, Krait, Lachesis)
+EAPI=4
+HOMEPAGE=http://bues.ch/cms/hacking/razercfg.html
+IUSE=+pm-utils qt4
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=pm-utils? ( sys-power/pm-utils ) qt4? ( dev-python/PyQt4 ) dev-lang/python
+SLOT=0
+SRC_URI=http://bues.ch/razercfg/razercfg-0.21.tar.bz2
+_eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	63afaaed8aa819fdcb814c7cd39495a2	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	udev	a9a8d051efb42bfe884c1db82ce161de	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=c62fa060df6d9a71ab27fe6f7891bb09
