@@ -6,28 +6,30 @@ DIST razercfg-0.18.tar.bz2 65648 SHA256 df61b2f929e1ace6772b8f867abc1dc834e0f01f
 DIST razercfg-0.19.tar.bz2 65786 SHA256 ac1a78085d2f263354576e7d4b0eae5e95a2f86b9c77facd617499103756b0ab SHA512 27851ae587820d8426781b279f62ef1f8f1ca72734b678b0f7309cf7059c25b720c393ab78ec0e562aa2a394851c6947b34d4286ce317be18d06ab7ac0e273d3 WHIRLPOOL 6a2127c74aa78e03de261fb567e8033e2e92c7b253d07e3adf8747f417b877416bcdf173f915eb4bbf784c852cbec18b1c7e46a5391b2fd49fb9ef915ac552a7
 DIST razercfg-0.19_p20121013.tar.gz 290951 SHA256 c0f7c8dac52ff6a2106c2cadac3ca9e44e3da508aeb182b907233c6b78f36581 SHA512 e49955ff0a635348a285a3ad6f8150bf468ed315f9c3eac332c9879daddd3911b915968a950b379106a27ecfd953ba6770152827b2b7b3185b17d3e3499bed40 WHIRLPOOL e6b525377be0581383e97ea9e202532cecb817985e5444876717b88fcb04f10744aa8e17415362a0daf7889160acebd5199f3b864094b1c8300fed0db91de356
 DIST razercfg-0.20.tar.bz2 68289 SHA256 de2f2f038b085cb22a97968f2f12a4c776741af80e486fb494b756708556509b SHA512 cbd4b20bdbde207cf19cfae2d9179861ab2fa6660f0a11ac21982cf3548ef374292ef38b5fa1ecba9a79beb23c9d9b522080feb2c70bf5278120b071263ab991 WHIRLPOOL 04d867aac4281381a8f980f34b5f21e9c057055f4a7982f94928e162a41c318584a8418f6c2ecf9efcebe93d45b1dd1986520858414e0d5d2766c082e090b08a
+DIST razercfg-0.21.tar.bz2 68274 SHA256 bfbd6089273fbec3f7495032b623f5c46bbf2e3f953130cb0f610e5c8eede884 SHA512 2514908547e5f7ffbf79231a66f6ac731ebc328944c9589cc7218a83e16f7aed5e741dceb06949222ec35254fb596490aa8bd2bad4682a362de09144e00df638 WHIRLPOOL ffcb3a5fe2b18a96998222714a0ab3ddb26f93e157a164922b2fdb9db06d273a071ee28e49d5d7cf2ab4447ffb9522b61b35c9ea31085cf54dfd1c48a9558975
 EBUILD razercfg-0.18.ebuild 1396 SHA256 be71cb03e09aa74b608e0e4165af8a8bb1b01f14699b1ed3ce2f27ce2fb0b14e SHA512 730cdd29cb5f0ec11942b294011953c495bb0269371bcb90d420b1d6b3eb2edccf45431ff7ca1d4360523ab4b8a1315e2f7684637b64716a8290b3a53bb9c24e WHIRLPOOL 24b091f37003b94a8491d7ba7c37373a75a7f07c28b69cab883110d0b6d8de46e27821a609c1553d98a08d1e063ba2ff2d251659a27a91d12a9003331879f1db
 EBUILD razercfg-0.19.ebuild 1396 SHA256 c7914e7b2f0d88d5fdaadb81a22c5c1293be476030cf29df52a551e9edad1fe1 SHA512 1c085bd439f822f9816f9fd977c62541612cb29943a0dc56b32eb25dc17a14e3f10b5441bc78386993e89b9145e9f0d404f407d968eb67355b72df4b5b72566e WHIRLPOOL e2a7a384be293d00ed2939e38b9676402b1abc232f4ee06ab9ea06d9c9e85b7438df198efd248fe9bdc0531d22beb1dc7aa3614d6b9d319b4feeeb0f211d9755
 EBUILD razercfg-0.19_p20121013.ebuild 1559 SHA256 0e0048cd92227dbcb136d0157e1f308f24acf769f5a272cc03a7b19ccf72c96c SHA512 d3e8be35ef7e93aab401d38e2e42d307185d9f401237acfbb11eb0616254da2a92272fb15596fe8d716e9825da1d048cfeae83cf6bccfde3bff86321314f5884 WHIRLPOOL 8e7bb9205445eb7bfc348a7b7dbc008585f0b315019ef8ccf46e8e442b4b4009a54615a24546af26959bbdf45e29912b79a5c34cc176334e0aab16ef77344f80
 EBUILD razercfg-0.20.ebuild 1396 SHA256 60426806ac58b8c46365877e6d21409e8cf938eaaf0038ec893679ec88f104f2 SHA512 9e21d54e7efccea4f206e7f9200c6c25471ee4a0a0f6cd336e2030975109aa93992d2a2fe6e71b8cc2f947d4d8dd69092dac866d369314fb7dcfc4c1654cd8df WHIRLPOOL a7233b8f2fa2442636ea99f0a23224d64933281e22c466848cafe5fb983b9304011cc8e53649acdc82e85a2e61f33a8c65086e2a9175af6114ceeb9e43ac2466
-MISC ChangeLog 2718 SHA256 4fc932f75d675e045f3d12c8ff2b97a5d7cc7d710ca43de218951ba6c7c9e284 SHA512 516d34f5b901ad183bd1db80ba65d50976c877ee10926403519677780ba292bf813a422330edb0c542979286d1e2c0fd3170eb4658af7d43dd8bca9e1270d081 WHIRLPOOL 8b4e0690b7f6a9f24c38d424c107d0ec1fa5113e429e2497f1bea376648dbc3e80942a5ec79cf14d505fc97cb57776c38ae7d1fcc627fa2e4ca9a9685e3141b5
+EBUILD razercfg-0.21.ebuild 1396 SHA256 6396fa020b1ad6026ecf0ea2ebe36cb2dbf4d9f60f3a6f66a09962b2264ab79f SHA512 b51a3442f0a299405dbf4fa77846911d9836c491ea9ec0f836c6d4d1ead9f10fa8640630d5d658333ffa081eec112274a9dc6fc6e7039088958b07059865ced9 WHIRLPOOL 528274624499d5a30ff8958a87ddfc7d20bea92e95c780118a19e5fffab178adc8783a915f9af974e74df72a7627361bedfbf94dd0e4f7a84eb81531132ff528
+MISC ChangeLog 2842 SHA256 917e489548d92e90f05859b79e557fd305a6633a36f50463fe960defc0605598 SHA512 6292aae9a5a932a04bac2d02e147958226256b850f466a824405746daf5265c003800a7a24285e5cf8156c02fa31b4c924d3e56f6f50afc7d68254b120e688d9 WHIRLPOOL dce5ee013e23fe034de27138af683259663056401bf21c0ed06537dcb09079be3a95d274d6830ec76c95c8e21939aaf92a5b5a0be7817efb44a16777edb7a8a5
 MISC metadata.xml 904 SHA256 5b25d7c848021f7153a4556c316e694db1cbda8f31d628fa6cfbff738520d621 SHA512 f5d43e4b625958c0be9f31c847d7e4631bf1100cb26d0fa19ee5d4a8d43b1b0f0b8c72462562c3ea4bbb867a852aa8d81debc0b02fef3c7ace8f213439dcb585 WHIRLPOOL e50810579d9d78d25e8c8c78921c93f4dc566dbca3d527c3ede9b0829dea2c2f47a20a8a69622d1b049942fdee1b64840a0f6aed5b334e30cd56059c460464d2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRhW6mXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJR+NTJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0ODVGNzIyN0VCNkRCNUU5MzkzNzY5ODAw
-MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkA7jcP/3cP7E9oGgbluRz7S6qOgGZu
-JdAXXv+IZOzJI3ILElTaw+dlKqAL2F1cnmPD8szsyGnAyGGc+0mEinsYhkElLq6s
-A3WFY5Czm8tnpAhQ7uWIylOEF8vSxI5dQuM5MhtJjWtJUAaLhYtEnMFYTAQTIz1g
-SchmaftwofxesYAmxI5F+FMv5M4wygSngPiNZF7VlnjKGxBFzu64s2cpUShwe/bH
-wWFkUJbMRTtF51hUlYE7A1osxGtIkVSDC9ezqvm77wPUNV24repqyfxsfFCLQ7+I
-qyMP/b6YFFSncSl7ezl6lZAS9KiyDXkQZTfSWvErlhqkASsTPFVrwgZCR4YJxlfu
-EGKr9KkiBvf3aVh7PJAIErGm5b0bUj/5EySdv1aSXYhCHJJC2q8Au1NxnJ16r31i
-7147jcySHsYi2r7G8sYLdhF623DPrWoL4WCBKiS/aQKYAumZ1RnPP3i2+loaRX65
-Z7lLOXyS5gOlHmzoE4pTKMKFGU7+X7QbnycyW7BnSoG4Njv7fb1Qj7eBUSnBugF+
-59J+eLZy4nb49ke2mQ1a50Si9T+mlb7MLUG2CN2t+8Kk5THhADCr3Jd+/G7YAQ2+
-NC7/hrDkT6TffBrUD8ppLrNTyOF/dzDR4yHauAI8Bd/CuGDyjbfSa8GzPz55Kc5O
-iT5+DoklNAtKalYYiCvM
-=rgZG
+MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkAbMkP/j8ikysXMJTPY6rkNZAwwDT8
+n6u3zL92t+2VPOMqXQSOrleTDz0V+3J3QbNftI8pI24XsINSZgjlMI83jJr7WmQs
+K/46fjrfaIqCWDSPYJJ3u+D/LlcBFz+k45SwNLA9yZsOJmRWh7KOe7UFzwKNj663
+nKLHt7HGt7/z1vMwjmYwSkD28BoMIi6c53AqOh3VjfgJzBPPEPODVRgtBNjlbocT
+bZVaFCXIeoyX+DTCfs0d2ZMN0OZxBU/rqXSPWVP3D7SaGGn1Yp6aD0GwCy/OCiBL
+gk7sk1YMiLjKaQcZEiISgpejmGR0RoFv2vHF7dFg87R25oAHZewpwcEzvqDHAkE+
+qmG2sPmGxkk7q/6sggXYLuvS+SqEKkbvZAYUwzbQ7STHw4Uw2eSXNXUHudbpD8vs
+BjQnsqJDwD7plw0WuNRvng6/zZf97Jzkz+55/lAMbWtxellX7MhM3+iQx3BGi4aG
+n9NzcxN/CO1FRCza4BukR3n1URC0lRAJd/jmjpOX1+5ZNiNQMIoI8yfsMcYgjEsA
+L/iWq5vduxRweo8Ur29M7IS55UIHotWbsRh9IhG8LkyKkygf438Uzl0/sTt+F7zX
+J55skp+ODr5JC24G2Usbo1e6xxLAukOifRKjeNpTWY/gTCf/udUNYbW/zKXwvKOZ
+iMZckVYFjJpNcrwPDvoT
+=HPPu
 -----END PGP SIGNATURE-----
